--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,9 @@ add_library(kcp_aio KCPClient.h KCPClient.cpp)
 add_dependencies(kcp_aio kcp_lib)
 target_link_libraries(kcp_aio udp_client kcp)
 
-install(FILES KCPClient.h DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
+install(FILES KCPClient.h
+    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+)
 
 install(TARGETS kcp_aio
     ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
