try to fix ExternalProject_Add again 12

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,13 +24,8 @@ install(FILES KCPClient.h
     DESTINATION include ${CMAKE_INSTALL_INCLUDEDIR}
 )
 
-install(TARGETS kcp_aio
-    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
-    INCLUDES DESTINATION include ${CMAKE_INSTALL_INCLUDEDIR}
-)
-
-install(TARGETS kcp
-    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+install(TARGETS kcp_aio kcp_lib
+    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     INCLUDES DESTINATION include ${CMAKE_INSTALL_INCLUDEDIR}
 )
 
