--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,14 +20,7 @@ add_library(kcp_aio KCPClient.h KCPClient.cpp)
 add_dependencies(kcp_aio kcp_lib)
 target_link_libraries(kcp_aio udp_client kcp)
 
-install(FILES KCPClient.h
-    DESTINATION include ${CMAKE_INSTALL_INCLUDEDIR}
-)
-
-install(TARGETS kcp_aio kcp-targets
-    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-    INCLUDES DESTINATION include ${CMAKE_INSTALL_INCLUDEDIR}
-)
+# TODO: add install() functionality
 
 add_executable(kcp_aio_test main.cpp)
 target_link_libraries(kcp_aio_test kcp_aio)
