fix: install headers in cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ add_library(kcp_aio KCPClient.h KCPClient.cpp)
 add_dependencies(kcp_aio kcp_lib)
 target_link_libraries(kcp_aio udp_client kcp)
 
-# TODO: add install() functionality
+install(FILES UDPClient.h DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 
 install(TARGETS udp_client
     EXPORT udp_client_targets
@@ -33,6 +33,8 @@ install(EXPORT udp_client_targets
     NAMESPACE udp_client::
     DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/udp_client
 )
+
+install(FILES KCPClient.h DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 
 install(TARGETS kcp_aio
     EXPORT kcp_aio_targets
