fix: install headers in cmake 6

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,12 +21,17 @@ add_library(kcp_aio KCPClient.h KCPClient.cpp)
 add_dependencies(kcp_aio kcp_lib)
 target_link_libraries(kcp_aio udp_client kcp)
 
-install(DIRECTORY ${EXTERNAL_INSTALL_LOCATION}/include
-    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
-    FILE_MATCHING
-    PATTERN "*.h")
+file(GLOB_RECURSE KCP_INCLUDES
+  "${EXTERNAL_INSTALL_LOCATION}/include/*.h"
+)
 
-install(FILES UDPClient.h DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
+install(FILES ${KCP_INCLUDES}
+    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+)
+
+install(FILES UDPClient.h
+    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+)
 
 install(TARGETS udp_client
     EXPORT udp_client_targets
@@ -40,7 +45,9 @@ install(EXPORT udp_client_targets
     DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/udp_client
 )
 
-install(FILES KCPClient.h DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
+install(FILES KCPClient.h
+    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+)
 
 install(TARGETS kcp_aio
     EXPORT kcp_aio_targets
