fix: try to fix installation again

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,45 +21,7 @@ add_library(kcp_aio KCPClient.h KCPClient.cpp)
 add_dependencies(kcp_aio kcp_lib)
 target_link_libraries(kcp_aio udp_client kcp)
 
-file(GLOB_RECURSE KCP_INCLUDES
-  "${EXTERNAL_INSTALL_LOCATION}/include/*.h"
-)
-
-install(FILES ${KCP_INCLUDES}
-    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
-)
-
-install(FILES UDPClient.h
-    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
-)
-
-install(TARGETS udp_client
-    EXPORT udp_client_targets
-    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
-    INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
-)
-
-install(EXPORT udp_client_targets
-    FILE udp-client-config.cmake
-    NAMESPACE udp_client::
-    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/udp_client
-)
-
-install(FILES KCPClient.h
-    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
-)
-
-install(TARGETS kcp_aio
-    EXPORT kcp_aio_targets
-    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
-    INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
-)
-
-install(EXPORT kcp_aio_targets
-    FILE kcp-aio-config.cmake
-    NAMESPACE kcp_aio::
-    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/kcp_aio
-)
+export(PACKAGE kcp_aio)
 
 add_executable(kcp_aio_test main.cpp)
 target_link_libraries(kcp_aio_test kcp_aio)
